# LINUX_ITOG

./: Dockerfile  install_dependencies.sh  readme.txt  setup_ssh.sh
catkin_ws/src/config/: sensors.rviz
catkin_ws/src/enveronment_monitor/: CmakeLists.txt  package.xml
catkin_ws/src/launch/: sensors.launch
catkin_ws/src/scripts/: data_processor.py
