<?xml version="1.0"?>
<package format="2">
  <name>environment_monitor</name>
  <version>0.1.0</version>
  <description>
    Пакет для системы мониторинга окружающей среды с поддержкой LIDAR, камеры и IMU датчиков
  </description>

  <maintainer email="your.email@example.com">Ваше Имя</maintainer>
  <license>MIT</license>

  <!-- Базовые зависимости ROS -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Зависимости для сборки -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Зависимости для работы -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>xsens_driver</exec_depend>
  <exec_depend>socketcan_interface</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_gui</exec_depend>

  <!-- Экспортируемые параметры -->
  <export>
    <!-- Нет специальных экспортов -->
  </export>
</package>
